name:                serve-here
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/3noch/serve-here#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Cameron <elliot@typeclad.com>
maintainer:          Elliot Cameron <elliot@typeclad.com>
copyright:           2016 Elliot Cameron
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable serve-here
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , servant
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:   DataKinds
                      , DeriveGeneric
                      , OverloadedStrings
                      , PolyKinds
                      , TypeFamilies
                      , TypeOperators

source-repository head
  type:     git
  location: https://github.com/3noch/serve-here.git
